--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="sticky-header">
+<header class="sticky-header">
   <div class="logo">
     <a href="/"><img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazivoyage"></a>
   </div>
@@ -34,4 +34,4 @@
       <li><a href="#contact">Liên Hệ</a></li>
     </ul>
   </div>
-</div>
+</header>
