--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,8 @@
   </div>
   <nav class="desktop-menu">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="#lang">Ngôn Ngữ</a></li>
-      <li><a href="#map">Bản Đồ</a></li>
-      <li><a href="#culture">Văn Hoá</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Blog</a></li>
       <li><a href="#contact">Liên Hệ</a></li>
     </ul>
   </nav>
@@ -27,10 +25,8 @@
   </div>
   <div class="mobile-menu-content">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="#lang">Ngôn Ngữ</a></li>
-      <li><a href="#map">Bản Đồ</a></li>
-      <li><a href="#culture">Văn Hoá</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Blog</a></li>
       <li><a href="#contact">Liên Hệ</a></li>
     </ul>
   </div>
