--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="https://lazivoyage.blogspot.com" target="_blank">Blog</a></li>
-      <li><a href="#contact">Liên Hệ</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   <div class="search-bar-container">
@@ -27,7 +27,7 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="https://lazivoyage.blogspot.com" target="_blank">Blog</a></li>
-      <li><a href="#contact">Liên Hệ</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
 </header>
