--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
   </div>
   <nav class="desktop-menu">
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Blog</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#home">Trang Chủ</a></li>
+      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Bài Viết</a></li>
+      <li><a href="#contact">Liên Hệ</a></li>
     </ul>
   </nav>
   <div class="search-bar-container">
@@ -25,9 +25,9 @@
   </div>
   <div class="mobile-menu-content">
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Blog</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#home">Trang Chủ</a></li>
+      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Bài Viết</a></li>
+      <li><a href="#contact">Liên Hệ</a></li>
     </ul>
   </div>
 </header>
