--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,8 +38,8 @@
       </button>
       
       <!-- Blog Button -->
-      <a href="https://lazivoyage.blogspot.com" class="floating-btn blog-btn" title="Blog Văn Hoá Việt">
+      <button href="https://lazivoyage.blogspot.com" class="floating-btn blog-btn" title="Blog Văn Hoá Việt">
           <i class="fas fa-blog"></i>
-      </a>
+      </button>
   </div>
 </header>
