--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,13 +33,13 @@
   <!-- Floating Buttons -->
   <div class="floating-buttons">
       <!-- Back to Top Button -->
-      <button id="backToTop" class="floating-btn" title="Lên đầu trang">
+      <a id="backToTop" class="floating-btn" title="Lên đầu trang">
           <i class="fas fa-chevron-up"></i>
-      </button>
+      </a>
       
       <!-- Blog Button -->
-      <button href="https://lazivoyage.blogspot.com" class="floating-btn blog-btn" title="Blog Văn Hoá Việt">
+      <a href="https://lazivoyage.blogspot.com" class="floating-btn blog-btn" title="Blog Văn Hoá Việt">
           <i class="fas fa-blog"></i>
-      </button>
+      </a>
   </div>
 </header>
