--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
   <div class="floating-buttons">
       <!-- Back to Top Button -->
       <a id="backToTop" class="floating-btn" title="Lên đầu trang">
-          <i class="fas fa-chevron-up"></i>
+          <i class="fa-solid fa-house"></i>
       </a>
       
       <!-- Blog Button -->
