--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,9 @@
   <nav class="desktop-menu">
     <ul>
       <li><a href="#home">Trang Chủ</a></li>
-      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Bài Viết</a></li>
+      <li><a href="manhghep">Góc Nhìn</a></li>
+      <li><a href="baiviet">Bài Viết</a></li>
+      <li><a href="faq">FAQ</a></li>
       <li><a href="#contact">Liên Hệ</a></li>
     </ul>
   </nav>
@@ -26,7 +28,9 @@
   <div class="mobile-menu-content">
     <ul>
       <li><a href="#home">Trang Chủ</a></li>
-      <li><a href="https://lazivoyage.blogspot.com" target="_blank">Bài Viết</a></li>
+      <li><a href="manhghep">Góc Nhìn</a></li>
+      <li><a href="baiviet">Bài Viết</a></li>
+      <li><a href="faq">FAQ</a></li>
       <li><a href="#contact">Liên Hệ</a></li>
     </ul>
   </div>
