--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,25 @@
-					<footer class="minimalist-footer">
-					  <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
-					  <p><strong>Blog văn hóa Việt</strong></p>
-					  <div class="social-circle">
-					    <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
-					    <a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
-					    <a href="https://fr.pinterest.com/goavecjo/"><i class="fab fa-pinterest"></i></a>
-					    <a href="https://x.com/guidefrvietnam"><i class="fab fa-twitter"></i></a>
-					    <a href="https://linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
-						<a href="https://lazivoyage.wordpress.com"><i class="fa-brands fa-wordpress-simple"></i></a>
-					  </div>
-					  <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
-					</footer>
+<footer class="minimalist-footer">
+ <img src="images/lazi-voyage/logo-lazi-update.png" alt="Lazi Voyage" class="footer-logo">
+ <p><strong>Blog văn hóa Việt</strong></p>
+ <div class="social-circle">
+  <a href="https://instagram.com/josvu19"><i class="fab fa-instagram"></i></a>
+  <a href="https://facebook.com/josvu19"><i class="fab fa-facebook"></i></a>
+  <a href="https://fr.pinterest.com/goavecjo/"><i class="fab fa-pinterest"></i></a>
+  <a href="https://x.com/guidefrvietnam"><i class="fab fa-twitter"></i></a>
+  <a href="https://linkedin.com/in/guidefrancophonevietnam/"><i class="fab fa-linkedin"></i></a>
+  <a href="https://lazivoyage.wordpress.com"><i class="fa-brands fa-wordpress-simple"></i></a>
+ </div>
+ <div class="copyright">© 2023 Lazi Voyage | All Rights Reserved</div>
+  <!-- Floating Buttons -->
+  <div class="floating-buttons">
+      <!-- Back to Top Button -->
+      <a id="backToTop" class="floating-btn" title="Lên đầu trang">
+          <i class="fa-solid fa-house"></i>
+      </a>
+      
+      <!-- Blog Button -->
+      <a href="https://lazivoyage.blogspot.com" class="floating-btn blog-btn" title="Blog Văn Hoá Việt">
+          <i class="fas fa-blog"></i>
+      </a>
+  </div>
+</footer>
