--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       <li><a href="#manhghep">Góc Nhìn</a></li>
       <li><a href="#baiviet">Bài Viết</a></li>
       <li><a href="#faq">FAQ</a></li>
-      <li><a href="#contact">Liên Hệ</a></li>
+      <li><a href="#tour">Liên Hệ</a></li>
     </ul>
   </nav>
   <div class="search-bar-container">
@@ -31,7 +31,7 @@
       <li><a href="#manhghep">Góc Nhìn</a></li>
       <li><a href="#baiviet">Bài Viết</a></li>
       <li><a href="#faq">FAQ</a></li>
-      <li><a href="#contact">Liên Hệ</a></li>
+      <li><a href="#tour">Liên Hệ</a></li>
     </ul>
   </div>
 </header>
