--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
  <!-- Floating Buttons -->
  <div class="floating-buttons">
      <!-- Back to Top Button -->
-     <a id="backToTop" class="floating-btn" title="Lên đầu trang">
-         <i class="fa-solid fa-house"></i>
+     <a id="backToTop" class="floating-btn blog-btn" title="Lên đầu trang">
+         <i class="fa-regular fa-circle-up"></i>
      </a>
      
      <!-- Blog Button -->
