--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
  <!-- Floating Buttons -->
  <div class="floating-buttons">
      <!-- Back to Top Button -->
-     <a id="home" class="floating-btn" title="Lên đầu trang">
+     <a id="backToTop" class="floating-btn" title="Lên đầu trang">
          <i class="fa-regular fa-circle-up"></i>
      </a>
      
