--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4522,148 +4522,34 @@ input, select, textarea { -moz-appearance: none; -webkit-appearance: none; -ms-a
 			opacity: 0;
 		}
 
-	@media screen and (max-width: 980px) {
+	@media screen and (max-width: 980px) { .gallery.lightbox .modal .inner img { max-width: 100vw; } }
 
-		.gallery.lightbox .modal .inner img {
-			max-width: 100vw;
-		}
-
-	}
-
-	.gallery article .image {
-		background-color: rgba(9, 90, 39, 0.125);
-	}
+	.gallery article .image { background-color: rgba(9, 90, 39, 0.125); }
 
 /* Wrapper (style1) */
-
-	.wrapper.style1 > .inner {
-		padding: 7rem 3.5rem 5rem 3.5rem ;
-		margin: 0 auto;
-		max-width: 100%;
-		width: 64rem;
-	}
-
-		.wrapper.style1 > .inner.medium {
-			width: 48rem;
-		}
-
-		.wrapper.style1 > .inner.small {
-			width: 32rem;
-		}
-
-	@media screen and (max-width: 1680px) {
-
-		.wrapper.style1 > .inner {
-			padding: 5rem 2.5rem 3rem 2.5rem ;
-		}
-
-	}
-
-	@media screen and (max-width: 1280px) {
-
-		.wrapper.style1 > .inner {
-			padding: 4rem 4rem 2rem 4rem ;
-		}
-
-	}
-
-	@media screen and (max-width: 980px) {
-
-		.wrapper.style1 > .inner {
-			padding: 4.5rem 3rem 2.5rem 3rem ;
-		}
-
-	}
-
-	@media screen and (max-width: 736px) {
-
-		.wrapper.style1 > .inner {
-			padding: 3rem 2rem 1rem 2rem ;
-		}
-
-	}
+	.wrapper.style1 > .inner { padding: 7rem 3.5rem 5rem 3.5rem ; margin: 0 auto; max-width: 100%; width: 64rem; }
+		.wrapper.style1 > .inner.medium { width: 48rem; }
+		.wrapper.style1 > .inner.small { width: 32rem; }
+	@media screen and (max-width: 1680px) { .wrapper.style1 > .inner { padding: 5rem 2.5rem 3rem 2.5rem ; }	}
+	@media screen and (max-width: 1280px) { .wrapper.style1 > .inner { padding: 4rem 4rem 2rem 4rem ; }	}
+	@media screen and (max-width: 980px) { .wrapper.style1 > .inner { padding: 4.5rem 3rem 2.5rem 3rem ; } }
+	@media screen and (max-width: 736px) { .wrapper.style1 > .inner { padding: 3rem 2rem 1rem 2rem ; } }
 
 /* Wrapper (style2) */
-
-	.wrapper.style2 {
-		padding: 7rem;
-		background-color: #eeeeee;
-	}
-
-		.wrapper.style2 > .inner {
-			padding: 5.25rem 3.5rem 3.25rem 3.5rem ;
-			background-color: #ffffff;
-			border-radius: 0.5rem;
-			margin: 0 auto;
-			max-width: 100%;
-			position: relative;
-			width: 64rem;
-			z-index: 1;
-		}
-
-			.wrapper.style2 > .inner.medium {
-				width: 48rem;
-			}
-
-			.wrapper.style2 > .inner.small {
-				width: 32rem;
-			}
-
-		@media screen and (max-width: 1680px) {
-
-			.wrapper.style2 {
-				padding: 5rem;
-			}
-
-				.wrapper.style2 > .inner {
-					padding: 3.75rem 2.5rem 1.75rem 2.5rem ;
-				}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			.wrapper.style2 {
-				padding: 4rem;
-			}
-
-				.wrapper.style2 > .inner {
-					padding: 3rem 2rem 1rem 2rem ;
-				}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.wrapper.style2 {
-				padding: 2.25rem;
-			}
-
-				.wrapper.style2 > .inner {
-					padding: 3rem 2.25rem 1rem 2.25rem ;
-				}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.wrapper.style2 {
-				padding: 1.5rem;
-			}
-
-				.wrapper.style2 > .inner {
-					padding: 2rem 1.5rem 0.1rem 1.5rem ;
-				}
-
-		}
-
-	#wrapper > .wrapper.style2.invert:not(.color1):not(.color2):not(.color3):not(.color4):not(.color5):not(.color6):not(.color7) {
-		background-color: #222222;
-	}
-
-	#wrapper > .wrapper.style2.invert > .inner {
-		background-color: #095a27;
-	}
+	.wrapper.style2 { padding: 7rem; background-color: #eeeeee; }
+		.wrapper.style2 > .inner { padding: 5.25rem 3.5rem 3.25rem 3.5rem ; background-color: #ffffff; border-radius: 0.5rem; margin: 0 auto; max-width: 100%; position: relative; width: 64rem; z-index: 1; }
+			.wrapper.style2 > .inner.medium { width: 48rem; }
+			.wrapper.style2 > .inner.small { width: 32rem; }
+		@media screen and (max-width: 1680px) { .wrapper.style2 { padding: 5rem; }
+				.wrapper.style2 > .inner { padding: 3.75rem 2.5rem 1.75rem 2.5rem ; } }
+		@media screen and (max-width: 1280px) { .wrapper.style2 { padding: 4rem; }
+				.wrapper.style2 > .inner { padding: 3rem 2rem 1rem 2rem ; } }
+		@media screen and (max-width: 980px) { .wrapper.style2 { padding: 2.25rem; }
+				.wrapper.style2 > .inner { padding: 3rem 2.25rem 1rem 2.25rem ; } }
+		@media screen and (max-width: 736px) { .wrapper.style2 { padding: 1.5rem; }
+				.wrapper.style2 > .inner { padding: 2rem 1.5rem 0.1rem 1.5rem ; } }
+	#wrapper > .wrapper.style2.invert:not(.color1):not(.color2):not(.color3):not(.color4):not(.color5):not(.color6):not(.color7) { background-color: #222222; }
+	#wrapper > .wrapper.style2.invert > .inner { background-color: #095a27; }
 
 /* Items (transitions) */
 
@@ -6295,4 +6181,3 @@ input, select, textarea { -moz-appearance: none; -webkit-appearance: none; -ms-a
     .floating-buttons { right: 10px; bottom: 10px; }
     .floating-btn { width: 40px; height: 40px; font-size: 14px; }
 }
-
