--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,7 @@ input, select, textarea { -moz-appearance: none; -webkit-appearance: none; -ms-a
 	p { margin: 0 0 2rem 0; }
 		p.major { font-size: 1.25rem; }
 	h1, h2, h3, h4, h5, h6 {
-		font-family: "Playfair Display", Georgia, serif;
+		font-family: "Ubuntu", sans-serif;
 		font-weight: 700;
 		line-height: 1.375;
 		letter-spacing: 0.05em;
@@ -6181,3 +6181,4 @@ input, select, textarea { -moz-appearance: none; -webkit-appearance: none; -ms-a
     .floating-buttons { right: 10px; bottom: 10px; }
     .floating-btn { width: 40px; height: 40px; font-size: 14px; }
 }
+
